--- a/src/app/components/pages/profile/personal-info/personal-info.component.html
+++ b/src/app/components/pages/profile/personal-info/personal-info.component.html
@@ -1,40 +1,36 @@
 <mat-card class="mb-25 personal-info-card tagus-card" [class.component-dark-theme]="themeService.isDark()">
     <mat-card-header class="border-bottom">
-        <h5 class="mb-0">Personal Information</h5>
+        <h5 class="mb-0">{{title}}</h5>
     </mat-card-header>
     <mat-card-content>
-        <span class="d-block fw-semibold mb-5">About Me:</span>
-        <p>Hi! I am a skilled Computer Engineer with expertise in both backend and frontend software development and a proven track record of working collaboratively within a team environment.
-            In addition to my technical abilities, I possess strong research, analysis, and problem-solving skills, and I'm constantly eager to learn and apply new technologies to improve project outcomes.
-            <br>
-            My commitment to integrity, responsibility, and adaptability is unwavering, and I pride myself on being a highly devoted and reliable team member. I look forward to the opportunity to contribute my skills and experience to new challenges and projects.
-            <br>
-            <br>
-            My languages: Native Spanish and English B1-B2 (Spoken and Written).</p>
         <ul class="list ps-0 mb-0">
             <li>
-                <span class="fw-semibold d-inline-block">Full Name:</span>
+                <span class="fw-semibold d-inline-block">{{fullNameTitle}}:</span>
                 <span class="gray-color">Engels Abdel Medina Colmenares</span>
             </li>
             <li>
-                <span class="fw-semibold d-inline-block">Mobile:</span>
+                <span class="fw-semibold d-inline-block">{{mobileTitle}}:</span>
                 <span class="gray-color">(+58) 424 7584723</span>
             </li>
             <li>
-                <span class="fw-semibold d-inline-block">Email:</span>
-                <span class="gray-color">andrewburns@tagus.com</span>
+                <span class="fw-semibold d-inline-block">{{emailTitle}}:</span>
+                <span class="gray-color"><a href="mailto:engelsabdel@gmail.com" class="tagus">engelsabdel@gmail.com</a></span>
             </li>
             <li>
-                <span class="fw-semibold d-inline-block">Location:</span>
-                <span class="gray-color">San Cristobal, Venezuela</span>
+                <span class="fw-semibold d-inline-block">{{locationTitle}}:</span>
+                <span class="gray-color">{{location}}</span>
             </li>
             <li>
-                <span class="fw-semibold d-inline-block">Designation:</span>
-                <span class="gray-color">FullStack Developer</span>
+                <span class="fw-semibold d-inline-block">{{profesionTitle}}:</span>
+                <span class="gray-color">{{profesion}}</span>
             </li>
             <li>
-                <span class="fw-semibold d-inline-block">Experience:</span>
-                <span class="gray-color">25 Years</span>
+                <span class="fw-semibold d-inline-block">{{experienceTitle}}:</span>
+                <span class="gray-color">{{getExperienceTime()}}</span>
+            </li>
+            <li>
+                <span class="fw-semibold d-inline-block">{{languagesTitle}}:</span>
+                <span class="gray-color">{{languages}}</span>
             </li>
         </ul>
     </mat-card-content>
