--- a/src/app/components/pages/profile/stats/stats.component.html
+++ b/src/app/components/pages/profile/stats/stats.component.html
@@ -9,11 +9,12 @@
         <mat-card class="single-stats-box mb-25 tagus-card">
             <div class="d-flex align-items-center">
                 <div class="icon">
-                    <i class="flaticon-donut-chart"></i>
+                    <!-- <i class="flaticon-technical-support"></i> -->
+                    <i class="ri-body-scan-fill"></i>
                 </div>
                 <div class="title">
-                    <span class="d-block gray-color">Total Projects</span>
-                    <h3>24K</h3>
+                    <span class="d-block gray-color">As Full Stack Developer</span>
+                    <h3>{{getExperienceTime()}}</h3>
                 </div>
             </div>
         </mat-card>
@@ -25,8 +26,8 @@
                     <i class="flaticon-goal"></i>
                 </div>
                 <div class="title">
-                    <span class="d-block gray-color">Pending Projects</span>
-                    <h3>155K</h3>
+                    <span class="d-block gray-color">Graduated Engineering</span>
+                    <h3>2009</h3>
                 </div>
             </div>
         </mat-card>
@@ -35,11 +36,11 @@
         <mat-card class="single-stats-box mb-25 tagus-card">
             <div class="d-flex align-items-center">
                 <div class="icon">
-                    <i class="flaticon-award"></i>
+                    <i class="flaticon-worldwide"></i>
                 </div>
                 <div class="title">
-                    <span class="d-block gray-color">Total Revenue</span>
-                    <h3>$50.5M</h3>
+                    <span class="d-block gray-color">Working Remote Since</span>
+                    <h3>2016</h3>
                 </div>
             </div>
         </mat-card>
