--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,7 @@ $tagus-theme: mat.define-light-theme((
 :root {
     --fontFamily: 'Open Sans', sans-serif;
     --headingFontFamily: 'Raleway', sans-serif;
-    --heraBlueColor: #757fef;
+    --heraBlueColor: #1154D6; // #757fef;
     --aareRiverColor: #00b69b;
     --blackColor: #260944;
     --paragraphColor: #5b5b98;
@@ -645,7 +645,7 @@ button {
             }
             &.border-bottom {
                 padding-bottom: 20px;
-                border-bottom: 1px solid #eef0f7;
+                border-bottom: 1px solid var(--heraBlueColor);
             }
             .mat-mdc-card-header-text {
                 display: none;
